--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nuxt3-pwa-offline",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "main": "./nuxt.config.ts",
   "description": "⚡Nuxt layer with nuxt-content, full search-functionality, pwa and guide to how to publish to Google Play Store.",
-  "homepage": "https://create-google-app.vercel.app",
+  "homepage": "https://nuxt3-pwa-offline.vercel.app",
   "author": "Kyrie Eleison <jur.eleison@gmail.com> (https://github.com/lovkyndig)",
   "repository": {
     "type": "git",
-    "url": "git://github.com/lovkyndig/create-google-app"
+    "url": "git://github.com/lovkyndig/nuxt3-pwa-offline"
   },
   "license": "MIT",
   "devDependencies": {
@@ -21,7 +21,7 @@
     "@vueuse/nuxt": "^10.4.1",
     "eslint": "^8.51.0",
     "nuxt": "^3.7.4",
-    "nuxt-svgo": "^3.5.5",
+    "nuxt-svgo": "^3.5.4",
     "pagefind": "^1.0.3",
     "sitemap": "^7.1.1",
     "typescript": "^5.2.2",
